--- a/LottiePlayer/Base.lproj/Main.storyboard
+++ b/LottiePlayer/Base.lproj/Main.storyboard
@@ -724,7 +724,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="x0d-Ep-gTc"/>
                                                 </constraints>
-                                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Drop a Lottie FIle here to play" id="Lab-ak-EHP">
+                                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Drop a Lottie File here to play" id="Lab-ak-EHP">
                                                     <font key="font" size="14" name="HelveticaNeue"/>
                                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
